<resources>
    <string name="admob_id" translatable="false">ca-app-pub-4709639795626792~4135542515</string>

    <string name="app_name">Random Movie</string>
    <string name="random_movie">Get random movie</string>
    <string name="no_desc">There is no description for this movie.</string>
    <string name="movie_duration">Duration</string>
    <string name="language_key">en-US</string>
    <string name="filter_genre">Genre</string>
    <string name="filter_year">Year</string>
    <string name="dialog_pos_btn">Save</string>
    <string name="dialog_neg_btn">Cancel</string>
    <string name="toast_filter_ok">Filter saved succesfully</string>
    <string name="btn_previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_btn">Search movies</string>
    <string name="favourites_btn">Show favourites</string>
    <string name="set_filters">Set filters</string>
    <string name="min_year">Min year</string>
    <string name="max_year">Max year</string>
    <string name="filter_votes">Rating</string>
    <string name="filter_runtime">Duration</string>
    <string name="clear_filter">Clear</string>
    <string name="successful_login">Successfully logged in</string>
    <string name="no_result">Favourites list is empty</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="fav_label">Favourites</string>
    <string name="login_prompt">Log in with Google to access this function.</string>
    <string name="cancel">Cancel</string>
    <string name="Login">Log in</string>
    <string name="user_login_error">Error occured, try again.</string>
    <string name="user_logged_toast">Succesfully logged in!</string>
    <string name="movie_fav_toast">Movie added to list</string>
    <string name="movie_deleted_fav_toast">Movie removed from list</string>
    <string name="devMail" translatable="false">devdszerszen@gmail.com</string>
    <string name="devName" translatable="false">Damian Szerszeń</string>
    <string name="sendMailButton">Send message</string>
    <string name="error_msg_network">Check connection and try again</string>
    <string name="error_msg_lack_of_results">Results not found, change filters and try again</string>
    <string name="toast_filter_cleared">Filters cleared</string>
    <string name="more">More</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="gameInfoStatic">The application allows you to find a random movie from thousands of results available in the TMDb database. You can use filters and add movies to your list of favorites.\nThe application is still under development, if you have ideas or insights, feel free to contact me.</string>
</resources>
