<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/df_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity.MovieDetailsActivity.MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/df_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/df_buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/df_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:gravity="center"
            android:minHeight="40dp"
            android:textColor="@android:color/background_light"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/df_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/df_poster" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dr_details_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/df_infobar">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/df_tab_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabSelectedTextColor="@color/colorAccent"
                app:tabTextColor="@android:color/white">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/df_description_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="TAB_DESC"
                    android:text="@string/description" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/df_details_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="TAB_DETAILS"
                    android:text="@string/details"
                    android:visibility="gone"
                    tools:visibility="gone" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/df_view_under_tabs"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/df_tab_header">

                <ScrollView
                    android:id="@+id/df_detailsScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </ScrollView>

                <ScrollView
                    android:id="@+id/df_descriptionScrollView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <TextView
                        android:id="@+id/df_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="16dp"
                        android:justificationMode="inter_word"
                        android:padding="8dp"
                        android:textColor="@android:color/background_light"
                        android:textSize="16sp" />
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/df_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="visible"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/df_infobar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/df_infobar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:baselineAligned="false"
            android:minHeight="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/df_poster">

            <LinearLayout
                android:id="@+id/df_year_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/df_year_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/df_genres_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="0dp"></LinearLayout>

            <LinearLayout
                android:id="@+id/df_time_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingRight="0dp">

                <TextView
                    android:id="@+id/df_time_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/df_rating_element"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/df_poster"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/df_star_shape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/star" />

            <TextView
                android:id="@+id/df_rating_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:hint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:textSize="16dp"
                android:textStyle="bold" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/df_buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/df_random_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/random_movie"
            android:textColor="@android:color/background_light"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/df_previous_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/df_previous_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_previous"
            android:textColor="@android:color/background_light"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/df_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>